[package]
name = "sshp4ru"
version = "0.1.0"
edition = "2021"

[features]
USE_KQUEUE = []

[dependencies]
colored = "2.1.0"
chrono = "0.4"
libc = "0.2.161"
signal-hook = "0.3.17"
epoll = "4.3.3"
twox-hash = "2.0.0"
rand = "0.8.5"
nix = { version = "0.29.0", features = ["event", "process", "sched", "fs"]}
